@@ -1,4 +1,7 @@
-[Easy][JAVA]760 Find Angram Mappings  
-[Easy][JAVA]771-Jewels and Stones  
+[JAVA]  
+[Easy]760 Find Angram Mappings  
+[Easy]771-Jewels and Stones  
+[Easy]461-Hamming Distance  
+[Easy]657-Judge Route Circle  
+[MySQL]  
 [Easy][MySQL]595-Big Countries  
-[Easy][JAVA]461-Hamming Distance
